# CORI-Robot

./: .gitattributes  FSM.md  LICENSE  README.md  build.bash  build_output.txt
archive/06_05_2025/cori_ws/log/: latest_build
archive/06_08_2025/cori_ws/log/: latest_build
archive/06_08_2025/cori_ws/src/cori_cv/: package.xml  setup.cfg
archive/06_08_2025/cori_ws/src/cori_cv/cori_cv/nodes/: __init__.py
archive/06_09_2025/cori_ws/install/: setup.sh
archive/06_09_2025/cori_ws/log/: latest_build
archive/06_13_2025/cori_ws/: laundry_results_20250609_203407.json
archive/06_13_2025/cori_ws/log/: latest_build
archive/06_17_2025/cori_ws/: cori.urdf  launch_output.txt
archive/06_17_2025/cori_ws/log/: latest_build
archive/06_18_2025/cori_ws/log/: latest_build
archive/06_19_2025/cori_ws/: build.bash
archive/06_20_2025/cori_ws/: kill_all.bash
archive/06_30_2025/restore_points/cori_ws/install/cori_control/share/cori_control/: package.dsv  package.ps1  package.sh  package.xml
archive/06_30_2025/restore_points/cori_ws/src/cori_simulation/: package.xml  setup.py
assets/concept-art/: Cartoon_CORI  leaveme.txt
assets/models/blender_files/: CORI.blend  CORI.blend1  CORI_Solid.blend  CORI_Solid.blend1
assets/models/cori_models/: CORI_Models.blend
assets/models/stl/: CORI_Model_v1.0.stl  CORI_Model_v1.1.stl  CORI_Model_v1.2.stl
assets/videos/: 2025-06-19 07-31-37.mkv
assets/videos/mp4/: leaveme.txt
assets/videos/mvk/: 2025-06-18 21-28-08.mkv
cori_ros2_ws/: README.md
cori_ros2_ws/install/: local_setup.sh  setup.sh
cori_ros2_ws/log/: latest_build
cori_ws/: build.bash  build_modular.bash  cori.urdf  cori_demo_display.py  cori_unified_demo.py  current_dependencies.txt  virtual_object_database.json
cori_ws/cori_description/: CMakeLists.txt  readme.txt
cori_ws/database/: cori_spatial_database.json
cori_ws/install/: local_setup.sh  setup.sh
cori_ws/install/cori_vision/share/cori_vision/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
cori_ws/install/cori_vision/share/cori_vision/launch/: laundry_color_detector.launch.py
cori_ws/log/: latest_build
cori_ws/scripts/: cori_build.bash  cori_demo.bash  setup_environment.bash
cori_ws/src/: cori_spatial_database.json
cori_ws/src/cori_control/: setup.py
cori_ws/src/cori_core/: setup.py
cori_ws/src/cori_cv/: package.xml  setup.py
cori_ws/src/cori_cv/cori_cv/: cori_simulator.py  cori_unified_launcher.sh
cori_ws/src/cori_cv/cori_cv/nodes/: laundry_color_detector.py
cori_ws/src/cori_cv/cori_cv/sensor_fusion/: demo_display.py
cori_ws/src/cori_cv/launch/: laundry_color_detector.launch.py
cori_ws/src/cori_description/: CMakeLists.txt
cori_ws/src/cori_description/launch/: .spawn_cori.launch.py.swp  spawn_cori.launch.py  spawn_cori_ignition.launch.py
cori_ws/src/cori_description/meshes/: CORI_Solid.stl
cori_ws/src/cori_description/urdf/: cori.urdf.xacro
cori_ws/src/cori_description/worlds/: laundry_world.sdf
cori_ws/src/cori_gui/: setup.py
cori_ws/src/cori_simulation/: package.xml  setup.py
cori_ws/src/cori_tools/: package.xml  setup.py
cori_ws/src/cori_vision/: setup.py
cori_ws/src/database/: cori_spatial_database.json
cori_ws/src/tools/: cori_ignition_database.json  cori_ignition_integration.py  cori_system_info_20250627_102518.txt
docs/: FSM.md  File_Structure.md  Looking_Towards_The_Future.md  looking_toward_the_future.md  package_structure.md
docs/project_updates/: update_v4.md  v1.0_update.md  v1.1_update.md  v1.2_update.md  v1.3_update.md  v1.4_update.md  v1.5_update.md  v1.6_update.md
laundry_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
laundry_ws/laundry_bot/: package.xml  setup.cfg  setup.py
laundry_ws/log/: latest_build
log/: latest_build
(+213 files in other folders)
