<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeid="package_format3"?>
<package format="3">
  <name>cori_vision</name>
  <version>1.0.0</version>
  <description>Computer vision and object detection for CORI robot</description>
  <maintainer email="jwuptegraph@gmail.com">Johnathan Uptegraph</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>