<?xml version="1.0"?>
<package format="3">
  <name>cori_control</name>
  <version>0.0.0</version>
  <description>CORI control Package</description>
  <maintainer email="jwuptegraph@gmail.com">Johnathan Uptegraph</maintainer>
  <license>Apache License 2.0</license>
  <depend>rclpy</depend>
  <export><build_type>ament_python</build_type></export>
</package>
